# system_programming

./: CMakeLists.txt  Dockerfile  Makefile  myshell  readme.md  run_docker.sh  source_code_report.md
include/: commands.h  config.h  mainwindow.h  mainwindow_actions.h  mainwindow_file_actions.h  mainwindow_process_actions.h  mainwindow_test_actions.h  mainwindow_ui.h  utils.h
src/: commands.c  main.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_file_actions.cpp  mainwindow_process_actions.cpp  mainwindow_test_actions.cpp  mainwindow_ui.cpp  utils.c
utils/: install_dependencies.sh
